@@ -1,3 +1,11 @@
+2013-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/action/body_hold_ball2008.cpp:
+	- 敵が全方位移動した場合を考慮した妨害判定を行うように修正
+
+	* rcsc/player/self_intercept_simulator.cpp:
+	- 念の為，ダッシュ方向の正規化しておくように修正
+
 2013-06-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/action/neck_scan_field.cpp:
